Add mail support

--- a/CurrencyCore/App/Sources/Modules/Settings/SettingsScreenModule/Localization/en.lproj/SettingsScreenLocalization.strings
+++ b/CurrencyCore/App/Sources/Modules/Settings/SettingsScreenModule/Localization/en.lproj/SettingsScreenLocalization.strings
@@ -23,3 +23,5 @@
 "Application.Title" = "CurrencyCore";
 "Exit.Title" = "Exit";
 "Premium.Title" = "Premium";
+"Premium.Activated" = "Activated";
+"Premium.NotActivated" = "Not activated";
