--- a/CurrencyCore/App/Sources/Modules/Settings/SettingsScreenModule/Localization/ru.lproj/SettingsScreenLocalization.strings
+++ b/CurrencyCore/App/Sources/Modules/Settings/SettingsScreenModule/Localization/ru.lproj/SettingsScreenLocalization.strings
@@ -23,3 +23,5 @@
 "Application.Title" = "CurrencyCore";
 "Exit.Title" = "Выйти";
 "Premium.Title" = "Премиум";
+"Premium.Activated" = "Активирован";
+"Premium.NotActivated" = "Не активирован";
