--- a/LocalDependencies/SKAbstractions/Sources/SKAbstractions/Models/Services/CurrencyRate/Localization/en.lproj/CurrencyModelLocalization.strings
+++ b/LocalDependencies/SKAbstractions/Sources/SKAbstractions/Models/Services/CurrencyRate/Localization/en.lproj/CurrencyModelLocalization.strings
@@ -6,50 +6,50 @@
  
  */
 
-"USD.Name" = "United States Dollar";
+"USD.Name" = "Dollar";
 "EUR.Name" = "Euro";
-"RUB.Name" = "Russian Ruble";
-"CAD.Name" = "Canadian Dollar";
-"BRL.Name" = "Brazilian Real";
-"VND.Name" = "Vietnamese Dong";
-"TMT.Name" = "Turkmenistan Manat";
-"HUF.Name" = "Hungarian Forint";
-"AZN.Name" = "Azerbaijani Manat";
-"BYN.Name" = "Belarusian Ruble";
-"ZAR.Name" = "South African Rand";
-"CHF.Name" = "Swiss Franc";
-"CZK.Name" = "Czech Koruna";
-"NZD.Name" = "New Zealand Dollar";
-"TRY.Name" = "Turkish Lira";
-"JPY.Name" = "Japanese Yen";
-"QAR.Name" = "Qatari Riyal";
-"BGN.Name" = "Bulgarian Lev";
-"SGD.Name" = "Singapore Dollar";
-"RSD.Name" = "Serbian Dinar";
-"NOK.Name" = "Norwegian Krone";
-"HKD.Name" = "Hong Kong Dollar";
-"THB.Name" = "Thai Baht";
-"SEK.Name" = "Swedish Krona";
-"MDL.Name" = "Moldovan Leu";
-"DKK.Name" = "Danish Krone";
-"AED.Name" = "UAE Dirham";
-"EGP.Name" = "Egyptian Pound";
-"KRW.Name" = "South Korean Won";
-"PLN.Name" = "Polish Zloty";
-"IDR.Name" = "Indonesian Rupiah";
-"CNY.Name" = "Chinese Yuan";
-"GBP.Name" = "British Pound Sterling";
-"GEL.Name" = "Georgian Lari";
-"UAH.Name" = "Ukrainian Hryvnia";
-"KGS.Name" = "Kyrgyzstani Som";
-"XDR.Name" = "Special Drawing Rights (SDR)";
-"TJS.Name" = "Tajikistani Somoni";
-"AMD.Name" = "Armenian Dram";
-"AUD.Name" = "Australian Dollar";
-"KZT.Name" = "Kazakhstani Tenge";
-"RON.Name" = "Romanian Leu";
-"UZS.Name" = "Uzbekistani Som";
-"INR.Name" = "Indian Rupee";
+"RUB.Name" = "Ruble";
+"CAD.Name" = "Dollar";
+"BRL.Name" = "Real";
+"VND.Name" = "Dong";
+"TMT.Name" = "Manat";
+"HUF.Name" = "Forint";
+"AZN.Name" = "Manat";
+"BYN.Name" = "Ruble";
+"ZAR.Name" = "Rand";
+"CHF.Name" = "Franc";
+"CZK.Name" = "Koruna";
+"NZD.Name" = "Dollar";
+"TRY.Name" = "Lira";
+"JPY.Name" = "Yen";
+"QAR.Name" = "Riyal";
+"BGN.Name" = "Lev";
+"SGD.Name" = "Dollar";
+"RSD.Name" = "Dinar";
+"NOK.Name" = "Krone";
+"HKD.Name" = "Dollar";
+"THB.Name" = "Baht";
+"SEK.Name" = "Krona";
+"MDL.Name" = "Leu";
+"DKK.Name" = "Krone";
+"AED.Name" = "Dirham";
+"EGP.Name" = "Pound";
+"KRW.Name" = "Won";
+"PLN.Name" = "Zloty";
+"IDR.Name" = "Rupiah";
+"CNY.Name" = "Yuan";
+"GBP.Name" = "Pound";
+"GEL.Name" = "Lari";
+"UAH.Name" = "Hryvnia";
+"KGS.Name" = "Som";
+"XDR.Name" = "SDR";
+"TJS.Name" = "Somoni";
+"AMD.Name" = "Dram";
+"AUD.Name" = "Dollar";
+"KZT.Name" = "Tenge";
+"RON.Name" = "Leu";
+"UZS.Name" = "Som";
+"INR.Name" = "Rupee";
 
 // Countries (country)
 "USD.Country" = "United States";
