--- a/LocalDependencies/SKAbstractions/Sources/SKAbstractions/Models/Services/CurrencyRate/Localization/ru.lproj/CurrencyModelLocalization.strings
+++ b/LocalDependencies/SKAbstractions/Sources/SKAbstractions/Models/Services/CurrencyRate/Localization/ru.lproj/CurrencyModelLocalization.strings
@@ -6,50 +6,50 @@
  
  */
 
-"USD.Name" = "Доллар США";
+"USD.Name" = "Доллар";
 "EUR.Name" = "Евро";
-"RUB.Name" = "Российский рубль";
-"CAD.Name" = "Канадский доллар";
-"BRL.Name" = "Бразильский реал";
-"VND.Name" = "Вьетнамский донг";
-"TMT.Name" = "Туркменский манат";
-"HUF.Name" = "Венгерский форинт";
-"AZN.Name" = "Азербайджанский манат";
-"BYN.Name" = "Белорусский рубль";
-"ZAR.Name" = "Южноафриканский рэнд";
-"CHF.Name" = "Швейцарский франк";
-"CZK.Name" = "Чешская крона";
-"NZD.Name" = "Новозеландский доллар";
-"TRY.Name" = "Турецкая лира";
-"JPY.Name" = "Японская иена";
-"QAR.Name" = "Катарский риал";
-"BGN.Name" = "Болгарский лев";
-"SGD.Name" = "Сингапурский доллар";
-"RSD.Name" = "Сербский динар";
-"NOK.Name" = "Норвежская крона";
-"HKD.Name" = "Гонконгский доллар";
-"THB.Name" = "Тайский бат";
-"SEK.Name" = "Шведская крона";
-"MDL.Name" = "Молдавский лей";
-"DKK.Name" = "Датская крона";
-"AED.Name" = "Дирхам ОАЭ";
-"EGP.Name" = "Египетский фунт";
-"KRW.Name" = "Южнокорейская вона";
-"PLN.Name" = "Польский злотый";
-"IDR.Name" = "Индонезийская рупия";
-"CNY.Name" = "Китайский юань";
-"GBP.Name" = "Фунт стерлингов";
-"GEL.Name" = "Грузинский лари";
-"UAH.Name" = "Украинская гривна";
-"KGS.Name" = "Киргизский сом";
-"XDR.Name" = "Специальные права заимствования (SDR)";
-"TJS.Name" = "Таджикский сомони";
-"AMD.Name" = "Армянский драм";
-"AUD.Name" = "Австралийский доллар";
-"KZT.Name" = "Казахстанский тенге";
-"RON.Name" = "Румынский лей";
-"UZS.Name" = "Узбекский сум";
-"INR.Name" = "Индийская рупия";
+"RUB.Name" = "Рубль";
+"CAD.Name" = "Доллар";
+"BRL.Name" = "Реал";
+"VND.Name" = "Донг";
+"TMT.Name" = "Манат";
+"HUF.Name" = "Форинт";
+"AZN.Name" = "Манат";
+"BYN.Name" = "Рубль";
+"ZAR.Name" = "Рэнд";
+"CHF.Name" = "Франк";
+"CZK.Name" = "Крона";
+"NZD.Name" = "Доллар";
+"TRY.Name" = "Лира";
+"JPY.Name" = "Йена";
+"QAR.Name" = "Риал";
+"BGN.Name" = "Лев";
+"SGD.Name" = "Доллар";
+"RSD.Name" = "Динар";
+"NOK.Name" = "Крона";
+"HKD.Name" = "Доллар";
+"THB.Name" = "Бат";
+"SEK.Name" = "Крона";
+"MDL.Name" = "Лей";
+"DKK.Name" = "Крона";
+"AED.Name" = "Дирхам";
+"EGP.Name" = "Фунт";
+"KRW.Name" = "Вона";
+"PLN.Name" = "Злотый";
+"IDR.Name" = "Рупия";
+"CNY.Name" = "Юань";
+"GBP.Name" = "Фунт";
+"GEL.Name" = "Лари";
+"UAH.Name" = "Гривна";
+"KGS.Name" = "Сом";
+"XDR.Name" = "СДР";
+"TJS.Name" = "Сомони";
+"AMD.Name" = "Драм";
+"AUD.Name" = "Доллар";
+"KZT.Name" = "Тенге";
+"RON.Name" = "Лей";
+"UZS.Name" = "Сом";
+"INR.Name" = "Рупия";
 
 // Страны валют (country)
 "USD.Country" = "Соединённые Штаты";
