Improve settings screen

--- a/Currencify/App/Sources/Modules/Settings/SettingsScreenModule/Localization/en.lproj/SettingsScreenLocalization.strings
+++ b/Currencify/App/Sources/Modules/Settings/SettingsScreenModule/Localization/en.lproj/SettingsScreenLocalization.strings
@@ -30,3 +30,4 @@
 "AvailableInPremiumOnly.Title" = "Available in Premium only";
 "CurrencyRateSource.Title" = "Currency rate source";
 "LastUpdated.Title" = "Last updated on %@";
+"EditRate.Description" = "Increase or decrease the value of all currencies by a percentage of your choice";
