--- a/Currencify/App/Sources/Modules/Settings/SettingsScreenModule/Localization/ru.lproj/SettingsScreenLocalization.strings
+++ b/Currencify/App/Sources/Modules/Settings/SettingsScreenModule/Localization/ru.lproj/SettingsScreenLocalization.strings
@@ -30,3 +30,4 @@
 "AvailableInPremiumOnly.Title" = "Доступно только в Премиум";
 "CurrencyRateSource.Title" = "Источник курсов валют";
 "LastUpdated.Title" = "Дата обновления %@";
+"EditRate.Description" = "Увеличьте или уменьшите стоимость всех валют на выбранный вами процент";
