--- a/Currencify/App/Sources/Modules/PremiumScreenModule/Localization/ru.lproj/PremiumScreenLocalization.strings
+++ b/Currencify/App/Sources/Modules/PremiumScreenModule/Localization/ru.lproj/PremiumScreenLocalization.strings
@@ -24,3 +24,15 @@
 
 "page.1.title" = "Поддержите проект";
 "page.1.description" = "Станьте частью сообщества, помогающего нам стремительно развиваться";
+
+"page.2.title" = "Корректировка курсов";
+"page.2.description" = "Регулируйте курсы валют на выбранный процент";
+
+"page.3.title" = "Точность расчёта";
+"page.3.description" = "Устанавливайте количество знаков после запятой от 0 до 5";
+
+"page.4.title" = "Источник данных";
+"page.4.description" = "Выбирайте, откуда загружать курсы валют";
+
+"page.5.title" = "Больше валют";
+"page.5.description" = "Добавляйте несколько валют на главный экран для отображения курсов";
