--- a/Currencify/App/Sources/Modules/PremiumScreenModule/Localization/ru.lproj/PremiumScreenLocalization.strings
+++ b/Currencify/App/Sources/Modules/PremiumScreenModule/Localization/ru.lproj/PremiumScreenLocalization.strings
@@ -36,3 +36,6 @@
 
 "page.5.title" = "Больше валют";
 "page.5.description" = "Добавляйте несколько валют на главный экран для отображения курсов";
+
+"sale" = "Распродажа";
+"one_time_purchase" = "Разовая покупка";
