Add share sections

--- a/Currencify/App/Sources/Modules/Settings/SettingsScreenModule/Localization/en.lproj/SettingsScreenLocalization.strings
+++ b/Currencify/App/Sources/Modules/Settings/SettingsScreenModule/Localization/en.lproj/SettingsScreenLocalization.strings
@@ -31,3 +31,4 @@
 "CurrencyRateSource.Title" = "Currency rate source";
 "LastUpdated.Title" = "Last updated on %@";
 "EditRate.Description" = "Increase or decrease the value of all currencies by a percentage of your choice";
+"share" = "Share";
