--- a/Currencify/App/Sources/Modules/Settings/SettingsScreenModule/Localization/ru.lproj/SettingsScreenLocalization.strings
+++ b/Currencify/App/Sources/Modules/Settings/SettingsScreenModule/Localization/ru.lproj/SettingsScreenLocalization.strings
@@ -31,3 +31,4 @@
 "CurrencyRateSource.Title" = "Источник курсов валют";
 "LastUpdated.Title" = "Дата обновления %@";
 "EditRate.Description" = "Увеличьте или уменьшите стоимость всех валют на выбранный вами процент";
+"share" = "Поделиться";
