--- a/Currencify/App/Sources/Modules/MainScreenModule/Localization/en.lproj/MainScreenLocalization.strings
+++ b/Currencify/App/Sources/Modules/MainScreenModule/Localization/en.lproj/MainScreenLocalization.strings
@@ -10,3 +10,5 @@
 "Button.Update.Title" = "Update";
 "Error.Load.Data.Title" = "Currency Load Error";
 "Error.Load.Data.Descriptor" = "Check your connection";
+"SearchCurrency.Placeholder" = "Currency name";
+"CurrencyDelete" = "Delete";
