--- a/Currencify/App/Resources/Localization/en.lproj/InfoPlist.strings
+++ b/Currencify/App/Resources/Localization/en.lproj/InfoPlist.strings
@@ -8,9 +8,8 @@
 
 // MARK: - System
 
-"NSPhotoLibraryAddUsageDescription" = "Please grant access to your gallery to save images with embedded data.";
-"NSPhotoLibraryUsageDescription" = "Please grant access to your gallery to upload images for hiding or extracting data.";
-"NSCameraUsageDescription" = "Please grant access to your camera to take photos and embed hidden data in them.";
-"NSFaceIDUsageDescription" = "Please grant access to Face ID for secure access to hidden data.";
-"NSMicrophoneUsageDescription" = "Please grant access to the microphone to record audio messages and embed them in images.";
-"NSUserNotificationUsageDescription" = "Please allow notifications to receive updates on the status of embedded data.";
+"NSPhotoLibraryAddUsageDescription" = "Please grant access to your photo library to save created images with currency exchange rates.";
+"NSPhotoLibraryUsageDescription" = "Please grant access to your photo library to load images for displaying currency exchange rates.";
+"NSCameraUsageDescription" = "Please grant access to the camera to create and save photos with currency exchange rates.";
+"NSFaceIDUsageDescription" = "Please grant access to Face ID for secure login to the app and protection of your data.";
+"NSMicrophoneUsageDescription" = "Please grant access to the microphone to use voice commands for controlling the app.";
