--- a/Currencify/App/Sources/Modules/Settings/SettingsScreenModule/Localization/ru.lproj/SettingsScreenLocalization.strings
+++ b/Currencify/App/Sources/Modules/Settings/SettingsScreenModule/Localization/ru.lproj/SettingsScreenLocalization.strings
@@ -32,3 +32,5 @@
 "LastUpdated.Title" = "Дата обновления %@";
 "EditRate.Description" = "Увеличьте или уменьшите стоимость всех валют на выбранный вами процент";
 "share" = "Поделиться";
+"CryptoCurrencyType.Title" = "Включить криптовалюты";
+"CryptoCurrencyType.Description" = "Активируйте, чтобы добавить криптовалюты в список доступных валют";
