--- a/Currencify/App/Sources/Modules/PremiumScreenModule/Localization/en.lproj/PremiumScreenLocalization.strings
+++ b/Currencify/App/Sources/Modules/PremiumScreenModule/Localization/en.lproj/PremiumScreenLocalization.strings
@@ -31,8 +31,8 @@
 "page.3.title" = "Calculation Precision";
 "page.3.description" = "Set the number of decimal places from 0 to 5";
 
-"page.4.title" = "Data Source";
-"page.4.description" = "Choose the source for currency rates";
+"page.4.title" = "Cryptocurrencies";
+"page.4.description" = "Enable or disable cryptocurrency support to display them in the currency list";
 
 "page.5.title" = "More Currencies";
 "page.5.description" = "Add multiple currencies to the main screen to display rates";
