--- a/Currencify/App/Sources/Modules/PremiumScreenModule/Localization/ru.lproj/PremiumScreenLocalization.strings
+++ b/Currencify/App/Sources/Modules/PremiumScreenModule/Localization/ru.lproj/PremiumScreenLocalization.strings
@@ -31,8 +31,8 @@
 "page.3.title" = "Точность расчёта";
 "page.3.description" = "Устанавливайте количество знаков после запятой от 0 до 5";
 
-"page.4.title" = "Источник данных";
-"page.4.description" = "Выбирайте, откуда загружать курсы валют";
+"page.4.title" = "Криптовалюты";
+"page.4.description" = "Включите или выключите поддержку криптовалют для отображения в списке валют";
 
 "page.5.title" = "Больше валют";
 "page.5.description" = "Добавляйте несколько валют на главный экран для отображения курсов";
