Fix clear fields

--- a/Currencify/App/Sources/Modules/MainScreenModule/Localization/ru.lproj/MainScreenLocalization.strings
+++ b/Currencify/App/Sources/Modules/MainScreenModule/Localization/ru.lproj/MainScreenLocalization.strings
@@ -12,3 +12,4 @@
 "Error.Load.Data.Descriptor" = "Проверьте соединение";
 "SearchCurrency.Placeholder" = "Название валюты";
 "CurrencyDelete" = "Удалить";
+"Clear.Title" = "Очистить";
