--- a/Currencify/App/Sources/Modules/MainScreenModule/Localization/en.lproj/MainScreenLocalization.strings
+++ b/Currencify/App/Sources/Modules/MainScreenModule/Localization/en.lproj/MainScreenLocalization.strings
@@ -12,3 +12,4 @@
 "Error.Load.Data.Descriptor" = "Check your connection";
 "SearchCurrency.Placeholder" = "Currency name";
 "CurrencyDelete" = "Delete";
+"Clear.Title" = "Clear";
